# $Id: Makefile.am 43429 2012-06-21 17:37:00Z gerald $
#
MAINTAINERCLEANFILES = \
	Makefile.in

EXTRA_DIST = \
	wireshark.nsi	\
	uninstall.nsi	\
	common.nsh	\
	GetWindowsVersion.nsh \
	servicelib.nsh \
	VersionCompare.nsh \
	AdditionalTasksPage.ini \
	WinPcapPage.ini \
	WinPcap_4_1_2.exe \
	Makefile.nmake \
	Custom.nmake \
	custom_plugins.txt	\
	x64.nsh
